--- a/res/values/rr_colors.xml
+++ b/res/values/rr_colors.xml
@@ -146,5 +146,9 @@
     <color name="ambient_light_body_color">#323232</color>
     <color name="search_bar_background_2">@*android:color/search_bar_background_2</color>
     <color name="settings_icon_oneplus">@android:color/white</color>
+  
+      <!--Like Octavi-->
+    <color name="card_view_bg">#248f8f8f</color>
+    <color name="divider_light">?android:colorAccent</color>
 
 </resources>
